working on mobile button sticking fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,5 @@
 font-family: 'Bebas Neue', cursive;
+
+.btn:hover {
+    background-color: inherit;
+}
